# KmpSqlencrypt

./: .gitignore  Changelog.md  ReadMe.md  SwiftReadMe.md  build.gradle.kts  gradle.properties  settings.gradle.kts
KmpSqlencrypt/: KmpSqlencrypt.podspec  Notes  build.gradle.kts  kmp_sc.podspec
KmpSqlencrypt/src/androidMain/cpp/: database.cpp
KmpSqlencrypt/src/commonTest/kotlin/: SqlCipherTests.kt
KmpSqlencrypt/src/nativeInterop/iosArm64/: Sqlcipher.def  libcrypto.pc
KmpSqlencrypt/src/nativeInterop/iosX64/: Sqlcipher.def  libcrypto.pc
KmpSqlencrypt/src/nativeInterop/linuxX64/: Sqlcipher.def  libcrypto.pc
KmpSqlencrypt/src/nativeInterop/macosArm64/: Sqlcipher.def  libcrypto.pc
KmpSqlencrypt/src/nativeInterop/macosX64/: Sqlcipher.def  libcrypto.pc
KmpSqlencrypt/src/nativeTest/kotlin/: BasicTestsNative.kt
KmpSqlencrypt/tools/: proguard-rules.pro
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/: Podfile
iosApp/iosApp/: ContentView.swift  LogonScreen.swift  Themes.swift  iosAppApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosApp/Controls/: AsyncButton.swift  TextEdit.swift
iosApp/iosAppTests/: iosAppTests.swift
iosApp/iosAppUITests/: iosAppUITests.swift  iosAppUITestsLaunchTests.swift
kmp-sc/: Notes  build.gradle.kts  kmp-sc.md  kmp_sc.podspec
kmp-sc/src/androidMain/cpp/: CMakeLists.txt  database.cpp
kmp-sc/src/commonTest/kotlin/: SqlCipherTests.kt
kmp-sqlencrypt/: KmpSqlencrypt.md  build.gradle.kts  kmp_sqlencrypt.podspec
kmp-sqlencrypt/src/androidMain/: AndroidManifest.xml
(+51 files in other folders)
